--- a/package.json
+++ b/package.json
@@ -10,20 +10,17 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "autoprefixer": "^10.1.0",
-    "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "postcss-loader": "^4.1.0",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
-    "pug-plain-loader": "^1.1.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
