--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.7.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.5.1"
+  }
 }
